Multiple fixes and enhancements
1. Prevent footer overlap with content
2. Make course.id string everywhere
3. course-preview.component: Load default course image on 404
4. course-preview.component: Add description
5. Make instruction box bigger in course.component
6. Fix instruction box horizontal scroll with pre-wrap

--- a/src/app/course-preview/course-preview.component.css
+++ b/src/app/course-preview/course-preview.component.css
@@ -1,3 +1,7 @@
 div.content {
     text-align: center;
 }
+
+pre.description {
+    text-align: left;
+}
