--- a/src/app/course.component.css
+++ b/src/app/course.component.css
@@ -18,6 +18,7 @@
     height: 100%;
     background-color: darkslategrey;
     color: white;
+    white-space: pre-wrap;
 }
 
 .input {
